--- a/Website 1/css/style.css
+++ b/Website 1/css/style.css
@@ -5,6 +5,10 @@
 	box-sizing: border-box;
 }
 
+a, a:visited, a:focus, a:active, a:hover{
+  outline:0 none !important;
+  text-decoration: none;
+}
 
 
 /******Top bar*****>*/
@@ -293,7 +297,7 @@
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
-	grid-row-gap: 30px;
+	/*grid-row-gap: 30px;*/
 	flex-wrap: wrap;
 	align-items: center;
 }
@@ -307,6 +311,8 @@
 	background-color: #021136;
 	border-radius: 5px;
 }
+
+
 
 .sec3-gridbox div {
 	margin: auto;
@@ -895,6 +901,9 @@
 	#terms{
 		text-align: center;
 	}
+	.sec3-gridbox {
+		margin-bottom: 30px;
+	}
 	
 }
 
@@ -964,6 +973,9 @@
 	#terms{
 		text-align: center;
 	}
+	.sec3-gridbox {
+		margin-bottom: 30px;
+	}
 }
 
 /*Medium devices (tablets, 768px and up)*/
@@ -985,16 +997,16 @@
 		margin-left: 16px;
 	}
 	#sec2-section1 {
-	float: left;
-	width: 80%;
-	padding-top: 72px;
-	padding-bottom: 72px;
-}
+		float: left;
+		width: 80%;
+		padding-top: 72px;
+		padding-bottom: 72px;
+	}
 
-#sec2-section2 {
-	width: 20%;
-	float: right;
-}
+	#sec2-section2 {
+		width: 20%;
+		float: right;
+	}
 	#left-cont {
 		margin-top: 11%;
 	}
@@ -1037,6 +1049,9 @@
 		float: left;
 		width: 50%;
 	}
+	.sec3-gridbox {
+		margin-bottom: 30px;
+	}
 	
 }
 
@@ -1069,16 +1084,16 @@
 		padding-right: 80px;
 	}
 	#sec2-section1 {
-	float: left;
-	width: 80%;
-	padding-top: 72px;
-	padding-bottom: 72px;
-}
+		float: left;
+		width: 80%;
+		padding-top: 72px;
+		padding-bottom: 72px;
+	}
 
-#sec2-section2 {
-	width: 20%;
-	float: right;
-}
+	#sec2-section2 {
+		width: 20%;
+		float: right;
+	}
 	#left-cont {
 		margin-top: 9%;
 	}
@@ -1087,6 +1102,9 @@
 	}
 	.sec3-gridbox {
 		width: 120px;
+	}
+	.sec3-first-row {
+		margin-bottom: 30px;
 	}
 	.sec6-box-cont-right {
 		width: 230px;
@@ -1139,32 +1157,19 @@
 		padding-right: 80px;
 	}
 	#sec2-section1 {
-	float: left;
-	width: 80%;
-	padding-top: 72px;
-	padding-bottom: 72px;
+		float: left;
+		width: 80%;
+		padding-top: 72px;
+		padding-bottom: 72px;
+	}
+	#sec2-section2 {
+		width: 20%;
+		float: right;
+	}
+	.sec3-first-row {
+		margin-bottom: 30px;
+	}
 }
 
-#sec2-section2 {
-	width: 20%;
-	float: right;
-}
-}
 
 
-
-/*#top-bar {
-	background-color: #221e61;
-	min-height: 350px;
-	line-height: 35px;
-	color: white;
-	position: relative;
-}
-.vertical-align {
-	position: absolute;
-	top: 44%;
-	transform: translate(-50%, -50%);
-}
-*/a, a:visited, a:focus, a:active, a:hover{
-  outline:0 none !important;
-}
