--- a/Website 1/css/style.css
+++ b/Website 1/css/style.css
@@ -216,7 +216,7 @@ a, a:visited, a:focus, a:active, a:hover{
 
 #parx-img1 {
 	height: auto;
-	background-image: url('../images/4.jpg');
+	background-image: url('../images/5.jpg');
 	background-size: cover;
 	background-attachment: fixed;
 }
@@ -371,7 +371,7 @@ a, a:visited, a:focus, a:active, a:hover{
 
 #parx-img2 {
 	height: auto;
-	background-image: url('../images/3.jpg');
+	background-image: url('../images/6.jpg');
 	background-size: cover;
 	background-repeat:no-repeat;
 	background-attachment: fixed;
@@ -404,7 +404,7 @@ a, a:visited, a:focus, a:active, a:hover{
 	border: 4px solid white;
 	border-radius: 50%;
 	margin: auto;
-	background-image: url('../images/t2.jpg');
+	background-image: url('../images/7.jpg');
 	background-size: cover;
 }
 
@@ -464,17 +464,17 @@ a, a:visited, a:focus, a:active, a:hover{
 }
 
 #sec6-img1 {
-	background-image: url('../images/g9.jpg');
+	background-image: url('../images/8.jpg');
 	background-size: cover;
 }
 
 #sec6-img2 {
-	background-image: url('../images/g8.jpg');
+	background-image: url('../images/9.jpg');
 	background-size: cover;
 }
 
 #sec6-img3 {
-	background-image: url('../images/g10.jpg');
+	background-image: url('../images/10.jpg');
 	background-size: cover;
 }
 
@@ -614,7 +614,6 @@ a, a:visited, a:focus, a:active, a:hover{
 .sec6-ftr-upper-widercont {
 	width: 35%;
 /*	height: 250px;*/
-	padding-right: 30px;
 /*	background-color: #b1c3f2;*/
 }
 
@@ -686,7 +685,7 @@ a, a:visited, a:focus, a:active, a:hover{
 }
 
 #ftr-email {
-	width: 55px;
+	width: 100%;
 	height: 47px;
 	border-top-right-radius: 4px;
 	border-bottom-right-radius: 4px;
@@ -699,7 +698,7 @@ a, a:visited, a:focus, a:active, a:hover{
 
 #email-search {
 	float: left;
-	width: 250px;
+	width: 80%;
 	height: 47px;
 	border-top-left-radius: 4px;
 	border-bottom-left-radius: 4px;
@@ -716,10 +715,11 @@ a, a:visited, a:focus, a:active, a:hover{
 	padding: 0;
 	border: 0;
 	margin-bottom: -20px;
-	width: 55px;
+	width: 20%;
 	height: 47px;
 	border-top-right-radius: 4px;
 	border-bottom-right-radius: 4px;
+	justify-content: flex-end;
 }
 
 
@@ -739,13 +739,12 @@ a, a:visited, a:focus, a:active, a:hover{
 }
 
 
-
-
-
-
-
-
-
+#newsletter-box {
+	width: 100%;
+	display: flex;
+	flex-direction: row;
+	justify-content: flex-start;
+}
 
 
 
@@ -801,9 +800,7 @@ a, a:visited, a:focus, a:active, a:hover{
 		width: 100% !important;
 		height: auto;
 	}
-	#email-search {
-		width: 60% !important;
-	}
+	
 	
 }
 
@@ -883,9 +880,7 @@ a, a:visited, a:focus, a:active, a:hover{
 	#ftr-box3{
 		order: 2;
 	}
-	#email-search {
-		width: 80%;
-	}
+
 	#ftr-copyright{
 		float: none;
 		width: 100%;
@@ -951,6 +946,7 @@ a, a:visited, a:focus, a:active, a:hover{
 	}
 	.sec6-ftr-upper-widercont {
 		width: 65%;
+		padding-right: 30px;
 	}
 	.sec6-ftr-upper-smallcont {
 		width: 35%;
@@ -1041,6 +1037,7 @@ a, a:visited, a:focus, a:active, a:hover{
 	}
 	.sec6-ftr-upper-widercont {
 		width: 65%;
+		padding-right: 30px;
 	}
 	.sec6-ftr-upper-smallcont {
 		width: 35%;
@@ -1128,6 +1125,9 @@ a, a:visited, a:focus, a:active, a:hover{
 	#email-search {
 		width: 200px;
 	}
+	.sec6-ftr-upper-widercont {
+		padding-right: 30px;
+	}
 
 }
 
@@ -1168,6 +1168,9 @@ a, a:visited, a:focus, a:active, a:hover{
 	}
 	.sec3-first-row {
 		margin-bottom: 30px;
+	}
+	.sec6-ftr-upper-widercont {
+		padding-right: 30px;
 	}
 }
 
