--- a/Main page/css/style.css
+++ b/Main page/css/style.css
@@ -183,11 +183,10 @@ body {
 }
 
 #sec1-heading {
-	font-family: 'Concert One';
+	font-family: 'Fugaz One';
 	font-size: 60px;
 	text-align: center;
 	margin-top: -5%;
-	font-weight: bold;
 }
 
 #sec2-box {
