--- a/My Page/css/style.css
+++ b/My Page/css/style.css
@@ -236,7 +236,7 @@ a, a:visited, a:focus, a:active, a:hover{
 	font-family: 'Fugaz One';
 	font-size: 60px;
 	text-align: center;
-	margin-top: -5%;
+	margin-top: -36.4px;
 }
 
 #section-2 {
