--- a/Javascript_Calculator/css/style.css
+++ b/Javascript_Calculator/css/style.css
@@ -19,9 +19,9 @@
 	font-size: 40px;
 	text-align: right;
 	line-height: 20vh;
-	padding-right: 40px;
+	border-right: 20px solid #383030;;
 	padding-left: 20px;
-	overflow: hidden;
+	overflow: scroll;
 }
 
 #lower-cont {
