--- a/Javascript_Calculator/css/style.css
+++ b/Javascript_Calculator/css/style.css
@@ -21,7 +21,7 @@
 	line-height: 20vh;
 	border-right: 20px solid #383030;;
 	padding-left: 20px;
-	overflow: scroll;
+	overflow: hidden;
 }
 
 #lower-cont {
